Fixed active colour not working on mobile header

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -750,4 +750,8 @@ select {
     .navbar-burger {
         display: block;
     }
+
+    .active {
+        background-color: #e4dfdf;
+    }
 }
